2003-02-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03781] Debian Bug report logs - #181897: w3m submits query urls with "extra"
	* main.c (_followForm): remove tailling '?'

2003-02-25  Hironori SAKAMOTO <h-saka@lsi.nec.co.jp>

	* [w3m-dev-en 00891] Re: w3m 0.4 has been released!
	* image.c (getCharSize): set W3M_TTY here, before Imgdisplay invoke
		(openImgdisplay): no need setting W3M_TTY here

2003-02-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2003-02-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.4
	* version.c.in: update
	* doc/README: version 0.4, release date
	* doc-jp/README: ditto
	* NEWS: update

2003-02-24  patakuti@t3.rim.or.jp

	* [w3m-dev 03772] Compilation error on Cygwin B20.1
	* terms.c (term_title): use Sprintf() instead of snprintf()
	* doc-jp/README.cygwin doc/README.cygwin: add note about B20.1

2003-02-21  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03765] Re: README.cygwin
	* doc/README.cygwin: translated

2003-02-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/README: update

2003-02-21  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* [w3m-dev 03762] Re: README.cygwin
	* doc/README.cygwin: translated

2003-02-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03761] eliminate compiler warnings
	* ftp.c (ftp_login): Str tmp
	* table.c (feed_table_tag): p is used ifdef ID_EXT 

2003-02-21  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03760] Re: README.cygwin
	* doc-jp/README: update

2003-02-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.4 release candidate 3
	* version.c.in: update

2003-02-19  Atsushi YOKOYAMA <yoko-a@cmh.fuchu.toshiba.co.jp>

	* [w3m-dev 03758] Re: SVR4 signal behavior
	* etc.c (reset_signals): use mySignal()
		(setup_child): ditto
		(myExec): ditto
		(mySignal): added, use sigaction if available
	* fm.h (TRAP_ON): use mySignal
		(TRAP_OFF): ditto
	* istream.c (ISclose): ditto
	* main.c (sig_chld): ditto
		(main): ditto
		(do_dump): ditto